plexserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media
  namespace: plexserver
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: media.palacpl.us
    external-dns.alpha.kubernetes.io/ttl: "120" #optional
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: media.palacpl.us
      http:
        paths:
          - path: /transmission
            pathType: Prefix
            backend:
              service:
                name: transmission-transmission-openvpn
                port:
                  number: 80
          - path: /sonarr
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 80
          - path: /jackett
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  number: 80
  tls:
    - hosts:
        - media.palacpl.us
      secretName: secure-tls
